testsuite/tests/polykinds/T16245a.stderr

T16245a.hs:13:51: error: [GHC-25897]
    • Expected kind ‘k1’, but ‘b’ has kind ‘k2’
      ‘k2’ is a rigid type variable bound by
        the newtype declaration for ‘T’
        at T16245a.hs:13:14
      ‘k1’ is a rigid type variable bound by
        the newtype declaration for ‘T’
        at T16245a.hs:12:11-40
    • In the second argument of ‘SameKind’, namely ‘b’
      In the type ‘(forall (b :: k). SameKind a b)’
      In the definition of data constructor ‘MkT’
